# mcp-api-doc

./: README.md  pyproject.toml
src/: server.py
src/mcp_api_doc/: server.py
