[tool.poetry]
name = "mcp docs"
version = "0.1.0"
description = ""
authors = ["Marky Hoang <thanghv2011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mcp-api-doc"
version = "0.1.0"

[project.scripts]
mcp-api-doc = "src.server:main"